--- a/skills/templates/skills/trainingbit_edit.html
+++ b/skills/templates/skills/trainingbit_edit.html
@@ -13,8 +13,18 @@
   {# Info/help button #}
   <a href="#" class="info-icon" data-reveal-id="info-modal" data-reveal>&#8505;</a>
   <div id="info-modal" class="reveal-modal" data-reveal>
-    <h1>{% itrans 'Building a Training Bit' %}</h1>
-    {% itrans "Make a description that piques the user's interest." %}
+    <h1>{% itrans 'General guidelines in making bits' %}</h1>
+    <p>{% itrans 'When you make your training bit follow these guidelines.' %}</p>
+
+    <ul>
+      <li>{% itrans "Every training bit is a little piece of learning within a bigger context of other training bits and skills" %}</li>
+      <li>{% itrans "Every training bit should have it's own learning goal" %}</li>
+      <li>{% itrans "Every training bit is a short amount of time usage i.e. 15 min. It is important that the user can see the end in order to keep the motivation. If you have to much material around your content, then make more bits - the user prefer a small bits and many, than one large one:-) Another trick is to divide your content in `must have` for the user and the use links for additional content (i.e. a pdf or long article)" %}</li>
+      <li>{% itrans "Be aware that you have to be very concrete and action orientated in your communication - the user is alone in front of the computer or mobile and can not ask you any questions :-)" %}</li>
+    </ul>
+
+    <h1>{% itrans 'The cover page' %}</h1>
+    <p>{% itrans 'The cover page for the training bit is important because it "sells" and explains the training bit to the user and should get her going with taking the training bit. Your communication have to be straight forward so the user knows what to expect and at the same time be exiting and with great energy :-)' %}</p>
     <a class="close-reveal-modal">&#215;</a>
   </div>
 </div>
@@ -28,7 +38,7 @@
     </div>
     <div class="help-text">
       <h6>Title</h6>
-      {% itrans "Please, give the training bit a name" %}
+      {% itrans " Please, give the training bit a name. Remember to give your training bit a name that makes concrete sense. Use a title that explains exactly what it is. Do not give it a fancy title. Users like boring titles online because they then know what to expect." %}
     </div>
   </div>
   <div class="input-field-row">
