--- a/skills/templates/skills/trainingbit_edit_content.html
+++ b/skills/templates/skills/trainingbit_edit_content.html
@@ -67,7 +67,8 @@ Offline.on('up', function() {
     <a href="#" class="info-icon" data-reveal-id="learn-info-modal" data-reveal>&#8505;</a>
     <div id="learn-info-modal" class="reveal-modal" data-reveal>
       <h1>Learn</h1>
-      {% itrans "This first part of the training bit is focused on giving you the right input and information about the topic you are studying. Whether it is a text on the background of the topic, a tutorial on how to use a specific tool or model or some input that inspires your creative thinking it will help you to understand and later, apply, this particular field." %}
+      {# {% itrans "This first part of the training bit is focused on giving you the right input and information about the topic you are studying. Whether it is a text on the background of the topic, a tutorial on how to use a specific tool or model or some input that inspires your creative thinking it will help you to understand and later, apply, this particular field." %} #}
+      {% itrans "In the Learn you have to inspire the user with an introduction and information around the topic. That can come in many formats like text, videos or with external tool. You have to be sure that the user has enough information to move on to Act." %}
       <a class="close-reveal-modal">&#215;</a>
     </div>
     <div class="trainingbit-content-editor learn-section" id="learn-edit">
@@ -82,7 +83,8 @@ Offline.on('up', function() {
     <a href="#" class="info-icon" data-reveal-id="act-info-modal" data-reveal>&#8505;</a>
     <div id="act-info-modal" class="reveal-modal" data-reveal>
       <h1>Act</h1>
-      {% itrans "The second part of each training bit is focused on action. Whether you have to go out an take photos of your stencil or answer a couple of tricky questions, this is where we want you to act and use the information you read through in the first part in real life." %}
+      {# {% itrans "The second part of each training bit is focused on action. Whether you have to go out an take photos of your stencil or answer a couple of tricky questions, this is where we want you to act and use the information you read through in the first part in real life." %} #}
+      {% itrans "Act is where the user acts or does something with the learning content you presented in Learn. Here it is important to create actions and/or active reflections for the user i.e. test the stencils in the streets, do a stakeholder analysis or ask reflective questions. Remember to be very clear in your communication on what you want to the user to do." %}
       <a class="close-reveal-modal">&#215;</a>
     </div>
     <div class="trainingbit-content-editor act-section" id="act-edit">
@@ -96,7 +98,8 @@ Offline.on('up', function() {
     <a href="#" class="info-icon" data-reveal-id="share-info-modal" data-reveal>&#8505;</a>
     <div id="share-info-modal" class="reveal-modal" data-reveal>
       <h1>Share</h1>
-      {% itrans "The last part of the training bit - and a step you need to do to complete it - is to share your work with the rest of us. Whether it is a short essay and a video of your latest campaign or a reflection about the use of a specific tool, it is an opportunity for you to share and connect with the Global Change Lab community." %}
+      {# {% itrans "The last part of the training bit - and a step you need to do to complete it - is to share your work with the rest of us. Whether it is a short essay and a video of your latest campaign or a reflection about the use of a specific tool, it is an opportunity for you to share and connect with the Global Change Lab community." %} #}
+      {% itrans "Share is where the user share his/hers result/part of the result of the learning and/or a specific reflection of the learning which the user can pass on to others. It is important here to make sure that it is easy to share something that the user i.e. feels proud off or can see the relevance for others. Be aware that all sharings serve as inspiration for other users on Global Change Lab." %}
       <a class="close-reveal-modal">&#215;</a>
     </div>
     <div class="trainingbit-content-editor share-section" id="share-edit">
