--- a/global_change_lab/templates/new_user_input_details.html
+++ b/global_change_lab/templates/new_user_input_details.html
@@ -13,12 +13,26 @@
   {% csrf_token %}
   <div class="row">
     <div class="columns medium-5">
-      <h1 class="white">Please, provide a few more details about yourself!</h1>
-      <p class="bold">
-        We would love to get to know you better and it helps us continue to
-        build an even better Global Change Lab.
-      </p>
+      <h1 class="white">Please provide us with more details about yourself</h1>
+      {# <p class="bold"> #}
+      {#   We would love to get to know you better and it helps us continue to #}
+      {#   build an even better Global Change Lab. #}
+      {# </p> #}
       <p>
+      We use the information for two reasons. The first one is the more we know
+      about you the better we can make Global Change Lab. Secondly we use the
+      data presented in anonymous ways to tell the ones that funds us to give us
+      more money.
+      </p>
+
+      <p>
+      We promise to take care of your personal information and will never share
+      it with third parties. Please read our
+      <a class="red" href="{% url 'terms' %}">Terms of Service</a> if you are
+      more interested. 
+      </p>
+
+      {% comment %}
         We want to give you the opportunity to get the best training in the
         world. To do that we need to get to know you a bit more, so please tell us
         more about yourself. Only your photo, username and description will be
@@ -26,8 +40,8 @@
         personal information to third parties. If you want to read more
         <a class="red" href="{% url 'about' %}">about this site</a>
         or to the terms of service please find them
-        <a class="red" href="{% url 'terms' %}">here</a>
-      </p>
+        here</a>
+      {% endcomment %}
       <p>Thank<!--s--> you ;-)</p>
     </div>
     <div class="columns medium-7">
