[Design] Upload sharper PNG of the peace guy

--- a/global_change_lab/templates/front_page.html
+++ b/global_change_lab/templates/front_page.html
@@ -8,7 +8,7 @@
 
 
 <div id="greeter-container">
-  <img src="{% static 'images/front_page-peace-guy.png' %}">
+  <img src="{% static 'images/peace-guy.png' %}">
   <div id="front-page-greeter">
     <div class="announcement">
       <span class="red">Change<br> the world!</span>
