--- a/scss/base.scss
+++ b/scss/base.scss
@@ -260,6 +260,7 @@ footer {
       }
       &#footer-guy {
         margin-top: rem-calc(20px);
+        height: rem-calc(280px);
       }
     }
   }
