--- a/global_change_lab/templates/front_page.html
+++ b/global_change_lab/templates/front_page.html
@@ -15,8 +15,8 @@
       Bit by bit
     </div>
     <div class="info">
-      {% itrans 'The Global Change Lab is a training hub for global activists.' %}
-      <strong>Start your training now!</strong>
+      {% itrans 'Global Change Lab is a training hub for global activists' %}
+      {# <strong>Start your training now!</strong> #}
       <a href="{% url 'account_signup' %}" class="button join">{% itrans 'Sign up' %}</a>
     </div>
   </div>
