[Fix] footer: Correct URL to `peace-guy.png`

--- a/global_change_lab/templates/base.html
+++ b/global_change_lab/templates/base.html
@@ -175,7 +175,7 @@
     </div>
     <div class="columns footer-images">
       <img id="footer-logo" src="{% static 'images/logo-small-footer.png' %}">
-      <img id="footer-guy" src="{% static 'images/footer-peace-guy.png' %}">
+      <img id="footer-guy" src="{% static 'images/peace-guy.png' %}">
     </div>
     <div class="creative-commons-icons">
       <span class="icon cc" href="#"></span>
