[Update] Use Foundation 5 flex video for embed
It automatically resizes them to the right size

--- a/skills/templates/skills/partials/project_column.html
+++ b/skills/templates/skills/partials/project_column.html
@@ -22,7 +22,9 @@
         {% endif %}
 
         {% if project.video %}
+          <div class="flex-video">
           {% video project.video %}
+          </div>
         {% endif %}
 
         <div class="metadata-fat">
