[Fix&Design] Render profile picture differently

--- a/scss/base.scss
+++ b/scss/base.scss
@@ -206,7 +206,7 @@ footer {
         .profile-picture {
           text-align: center;
           img {
-            height: 3.5rem;
+            max-height: 3.5rem;
           }
         }
       }
