[Update] Open external links in a new window
+ Update design for links in projects
+ Fix and design for links in project-columns

--- a/global_change_lab/templates/base.html
+++ b/global_change_lab/templates/base.html
@@ -162,14 +162,14 @@
         </div>
         <div class="large-4 columns">
           <h6>About Training</h6>
-          <a class="notice" href="#">Who we work with</a>
-          <a class="notice" href="http://www.globalplatforms.org/training-principles">{% itrans 'Training Principles' %}</a>
-          <a class="notice" href="http://www.globalplatforms.org/all-trainings">{% itrans 'Get Trained Face To Face' %}</a>
+          <a target="_blank" class="notice" href="#">Who we work with</a>
+          <a target="_blank" class="notice" href="http://www.globalplatforms.org/training-principles">{% itrans 'Training Principles' %}</a>
+          <a target="_blank" class="notice" href="http://www.globalplatforms.org/all-trainings">{% itrans 'Get Trained Face To Face' %}</a>
         </div>
         <div class="large-4 columns">
           <h6>Who We Are</h6>
-          <a class="notice" href="http://www.globalplatforms.org">Global Platforms</a>
-          <a class="notice" href="http://ms.dk">ActionAid Denmark</a>
+          <a target="_blank" class="notice" href="http://www.globalplatforms.org">Global Platforms</a>
+          <a target="_blank" class="notice" href="http://ms.dk">ActionAid Denmark</a>
         </div>
       </div>
     </div>
