--- a/skills/templates/skills/partials/trainingbit_parts.html
+++ b/skills/templates/skills/partials/trainingbit_parts.html
@@ -23,7 +23,7 @@ window.GCL.trainingbit_editable = window.GCL.trainingbit_editable || false;
     <div class="icon-wrapper">
       <span class="icon medium link black"></span>
     </div>
-    <a href="<%= url %>" title="<%= title %>" style="display: inline-block; float: left">
+    <a target="_blank" href="<%= url %>" title="<%= title %>" style="display: inline-block; float: left">
       <span class="title"><%= title %></span>
       <p><%= description %></p>
     </a>
