--- a/global_change_lab/templates/flatpages/default.html
+++ b/global_change_lab/templates/flatpages/default.html
@@ -55,7 +55,7 @@
       var editor = new MediumEditor('#flatpage', {
         anchorInputPlaceholder: 'Type a link',
         placeholder: 'Type your text here',
-        buttons: ['bold', 'italic', 'header1', 'header2', 'orderedlist', 'unorderedlist'],
+        buttons: ['bold', 'italic', 'header1', 'header2', 'orderedlist', 'unorderedlist', 'anchor'],
         diffLeft: 0,
         diffTop: -10,
         firstHeader: 'h1',
