--- a/global_change_lab/templates/flatpages/default.html
+++ b/global_change_lab/templates/flatpages/default.html
@@ -26,7 +26,7 @@
 </div>
 
 <div id="flatpage">
-  <h1>{{ flatpage.title }}</h1>
+  {# <h1>{{ flatpage.title }}</h1> #}
   {{ flatpage.content }}
     {# <textarea name="content" id="content-editor-textarea" rows="10" cols="80" placeholder="Write the page content here"></textarea> #}
 </div>
