--- a/scss/flatpage.scss
+++ b/scss/flatpage.scss
@@ -2,4 +2,12 @@
   max-width: rem-calc(800px);
   margin-left: auto;
   margin-right: auto;
+
+  a {
+    color: $gcl-red;
+
+    &:hover {
+      color: black;
+    }
+  }
 }
