[Text] new_user.html: Update texts

--- a/global_change_lab/templates/new_user.html
+++ b/global_change_lab/templates/new_user.html
@@ -22,19 +22,19 @@
         <li>
           <h2>Skills</h2>
           <p>
-            {% itrans "Skills are sets of selected training bits that help you become even better within areas such as campaigning, activism, social change and much more. You can take the selected training bits in any order you'll like but you need to take them all to get the skill you need to change the world. Are you up for the challenge?" %}
+            {% itrans "Skills are sets of selected training bits you need to change the world. You can take the training bits in any order you'll like but you need to take them all to get the skill." %}
           </p>
         </li>
         <li>
           <h2>Training Bits</h2>
           <p>
-            {% itrans "Training Bits are just what you need to get to know activism, social change or get event better at campaigning. These small bits of training are divided into inspiration, tools or background to help you set-up your training in your on style. We are adding new ones all the time so remember to check in for new stuff to learn." %}
+            {% itrans "Training bits are small pieces of inspiration, tools or background in activism and social change. Each training bit has something for you to learn, to act upon and to share with other activists. You are free to choose the bits you want and do them in your own pace." %}
           </p>
         </li>
         <li>
           <h2>Sharing is Caring!</h2>
           <p>
-            {% itrans "To complete a training bit and get a skill you must share your work, actions or thoughts with the rest of us. That way we will all learn together and help each other change the world for the better. We love to see your work!" %}
+            {% itrans "To complete a training bit you must share something you learned. Each training bit will explain what. When we share we can all inspire each other so we can truly change the world." %}
           </p>
         </li>
       </ul>
