[Text] new_user_topics.html: Update text

--- a/global_change_lab/templates/new_user_topics.html
+++ b/global_change_lab/templates/new_user_topics.html
@@ -8,7 +8,7 @@
   {% csrf_token %}
   <div class="row" id="topics-select">
     <div class="medium-4 columns">
-      <h2 class="white">{% itrans "Choose your topics of interest - and we will suggest some skils and training bits you can begin with." %}</h2>
+      <h2 class="white">{% itrans "Choose your topics of interest and we will suggest some skills and training bits you can begin with." %}</h2>
     </div>
     <div class="medium-8 columns">
       <ul class="topics">
