[Fix] email: Fix HTML signup email
Missing </h3> close tag (was mistakenly an open tag)

--- a/global_change_lab/templates/account/email/email_confirmation_signup_message.html
+++ b/global_change_lab/templates/account/email/email_confirmation_signup_message.html
@@ -13,7 +13,7 @@ Hi {{ user_display }} and welcome to Global Change Lab
 Please, confirm your profile by clicking on this link
 </p>
 <br>
-{{ activate_url }}<br>
+<a href="{{ activate_url }}">{{ activate_url }}</a><br>
 <br>
 and get ready to get the most out of Global Change Lab<br>
 
@@ -32,7 +32,7 @@ and social change.
 <a href="http://www.globalchangelab.org/trainingbits">Get going</a> with a bit right away
 </p>
 
-<h3>Share with others<h3>
+<h3>Share with others</h3>
 <p>
 When you complete training bits you need to take some
 action. Share what you do or <a href="http://www.globalchangelab.org/shares">learn from other activists</a>.
@@ -40,7 +40,7 @@ action. Share what you do or <a href="http://www.globalchangelab.org/shares">lea
 
 <p>
 To learn more about Global Change Lab, visit our
-<a href="http://www.globalchangelab.org/about-global-change-lab">About Page</a>
+<a href="http://www.globalchangelab.org/pages/about-global-change-lab">About Page</a>
 </p>
 
 <p>
