--- a/global_change_lab/templates/account/email/email_confirmation_signup_message.html
+++ b/global_change_lab/templates/account/email/email_confirmation_signup_message.html
@@ -9,15 +9,14 @@
 {% autoescape off %}
 {% blocktrans with current_site.name as site_name %}
 <p>
-Hi {{ user_display }} and welcome to Global Change Lab
-Please, confirm your profile by clicking on this link
+Hi {{ user_display }} and welcome to Global Change Lab<br>
+Please, confirm your profile by clicking on this link:
 </p>
-<br>
 <a href="{{ activate_url }}">{{ activate_url }}</a><br>
 <br>
-and get ready to get the most out of Global Change Lab<br>
+... and get ready to get the most out of Global Change Lab<br>
 
-<h3>Get activist skills</h3>
+<strong>Get activist skills</strong><br>
 </p>
 Skills are sets of training bits you need to change the world.
 <a href="http://www.globalchangelab.org/skills">Check out</a> what
@@ -25,28 +24,31 @@ skills you can begin with already today.
 </p>
 
 
-<h3>Do Training Bits</h3>
+<strong>Do Training Bits</strong><br>
 <p>
 Training bits are small pieces of inspiration, tools or background in activism
 and social change.
 <a href="http://www.globalchangelab.org/trainingbits">Get going</a> with a bit right away
 </p>
 
-<h3>Share with others</h3>
+<strong>Share with others</strong><br>
 <p>
 When you complete training bits you need to take some
 action. Share what you do or <a href="http://www.globalchangelab.org/shares">learn from other activists</a>.
 </p>
 
+<br>
 <p>
 To learn more about Global Change Lab, visit our
 <a href="http://www.globalchangelab.org/pages/about-global-change-lab">About Page</a>
 </p>
+<br>
 
 <p>
-Enjoy your bits and feel free to <a href="http://www.globalchangelab.org/contact">contact us</a>
-Train the world! Change the world!
-The Global Change Lab
+Enjoy your bits and feel free to
+<a href="http://www.globalchangelab.org/contact">contact us</a>.<br>
+Train the world! Change the world!<br>
+The Global Change Lab<br>
 </p>
 {% endblocktrans %}
 {% endautoescape %}
