--- a/skills/templates/skills/trainingbits_overview.html
+++ b/skills/templates/skills/trainingbits_overview.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load permissionif %}
 {% load inlinetrans %}
 
 {% block body-classes %}trainingbits-overview{% endblock %}
@@ -68,6 +69,19 @@ behind the topics.</p>
     <li><a href="?sort=created_at&dir=desc">Newest</a></li>
     <li><a href="?sort=created_at&dir=asc">Oldest</a></li>
   </ul>
+
+  {# View public #}
+  {% if showing_drafts %}
+    <a href="{% url 'skills:trainingbits_overview' %}" class="button info">
+      Show public trainingbits
+    </a>
+  {% else %}
+    {% permission request.user has 'skills.add_trainingbit' %}
+    <a href="{% url 'skills:trainingbits_overview_all' show_drafts=True %}" class="button info">
+      Show drafts
+    </a>
+    {% endpermission %}
+  {% endif %}
 </div>
 <h1 class="white-on-red">Training Bits</h1>
 <hr>
