[Text] Update texts

--- a/global_change_lab/templates/account/email/email_confirmation_signup_message.html
+++ b/global_change_lab/templates/account/email/email_confirmation_signup_message.html
@@ -10,13 +10,14 @@
 {% blocktrans with current_site.name as site_name %}
 <p>
 Hi {{ user_display }} and welcome to Global Change Lab<br>
+<br>
 Please, confirm your profile by clicking on this link:
 </p>
 <a href="{{ activate_url }}">{{ activate_url }}</a><br>
 <br>
 ... and get ready to get the most out of Global Change Lab<br>
 
-<strong>Get activist skills</strong><br>
+<h5>Get activist skills</h5>
 </p>
 Skills are sets of training bits you need to change the world.
 <a href="http://www.globalchangelab.org/skills">Check out</a> what
@@ -24,14 +25,14 @@ skills you can begin with already today.
 </p>
 
 
-<strong>Do Training Bits</strong><br>
+<h5>Do Training Bits</h5>
 <p>
 Training bits are small pieces of inspiration, tools or background in activism
 and social change.
 <a href="http://www.globalchangelab.org/trainingbits">Get going</a> with a bit right away
 </p>
 
-<strong>Share with others</strong><br>
+<h5>Share with others</h5>
 <p>
 When you complete training bits you need to take some
 action. Share what you do or <a href="http://www.globalchangelab.org/shares">learn from other activists</a>.
@@ -46,7 +47,7 @@ To learn more about Global Change Lab, visit our
 
 <p>
 Enjoy your bits and feel free to
-<a href="http://www.globalchangelab.org/contact">contact us</a>.<br>
+<a href="http://www.globalchangelab.org/pages/contact">contact us</a>.<br>
 Train the world! Change the world!<br>
 The Global Change Lab<br>
 </p>
