--- a/global_change_lab/templates/new_user_suggestions.html
+++ b/global_change_lab/templates/new_user_suggestions.html
@@ -6,15 +6,15 @@
 {% block info %}
   <p>
     {% itrans "Welcome!" %}<br>
-    {% itrans "Here are some suggestions of skills and training bits you can begin with." %}
+    {% itrans "We just found some skills and bits for you to get started." %}
   </p>
 
   <p>
-    {% itrans "Skills are sets of selected training bits that help you be an even better activist and just what you need to change the world. You can take the training bits of a skill in any order you'll like but you need to take them all to get the skill." %}
+    {% itrans "Skills are sets of selected training bits you need to change the world. You can take the training bits in any order you'll like but you need to take them all to get the skill." %}
   </p>
 
   <p>
-    {% itrans "Training Bits are just what you need to get to know activism, social change or get event better at campaigning. These small bits of training are divided into inspiration, tools or background to help you set-up your training in your on style." %}
+    {% itrans "Training bits are small pieces of inspiration, tools or background in activism and social change. Each training bit has something for you to learn, to act upon and to share with other activists. You are free to choose the bits you want and do them in your own pace." %}
   </p>
 {% endblock %}
 
