--- a/skills/templates/skills/trainingbit_view.html
+++ b/skills/templates/skills/trainingbit_view.html
@@ -87,7 +87,7 @@
     <form id="project-form" action="{% url 'skills:trainingbit_view' slug=trainingbit.slug %}" method="POST"  enctype="multipart/form-data">
       {% csrf_token %}
       <input type="text" name="name" placeholder="Title" class="title">
-      <textarea name="content" placeholder="{% trans 'Share your actions with others' %}"></textarea>
+      <textarea name="content" placeholder="{% trans 'Description' %}"></textarea>
       <div class="buttons">
         <div class="upload-button">
           <a href="#" id="image-upload-button" class="button">Upload image</a>
