[Text] emails: Clean up password reset email

--- a/global_change_lab/templates/account/email/password_reset_key_message.html
+++ b/global_change_lab/templates/account/email/password_reset_key_message.html
@@ -25,7 +25,7 @@ In case you forgot, your username is {{ username }}.
 
 <p>
 Thanks for using Global Change Lab!<br>
-The Global Change Lab.
+The Global Change Lab
 </p>
 {% endblocktrans %}
   </body>
