--- a/global_change_lab/templates/account/email/email_confirmation_signup_message.html
+++ b/global_change_lab/templates/account/email/email_confirmation_signup_message.html
@@ -13,11 +13,12 @@ Hi {{ user_display }} and welcome to Global Change Lab<br>
 <br>
 Please, confirm your profile by clicking on this link:
 </p>
-<a href="{{ activate_url }}">{{ activate_url }}</a><br>
+<a href="{{ activate_url }}">{{ activate_url }}</a>
+<br>
 <br>
 ... and get ready to get the most out of Global Change Lab<br>
-
-<h5>Get activist skills</h5>
+<br>
+<h4>Get activist skills</h4>
 </p>
 Skills are sets of training bits you need to change the world.
 <a href="http://www.globalchangelab.org/skills">Check out</a> what
@@ -25,14 +26,14 @@ skills you can begin with already today.
 </p>
 
 
-<h5>Do Training Bits</h5>
+<h4>Do Training Bits</h4>
 <p>
 Training bits are small pieces of inspiration, tools or background in activism
 and social change.
 <a href="http://www.globalchangelab.org/trainingbits">Get going</a> with a bit right away
 </p>
 
-<h5>Share with others</h5>
+<h4>Share with others</h4>
 <p>
 When you complete training bits you need to take some
 action. Share what you do or <a href="http://www.globalchangelab.org/shares">learn from other activists</a>.
@@ -49,7 +50,7 @@ To learn more about Global Change Lab, visit our
 Enjoy your bits and feel free to
 <a href="http://www.globalchangelab.org/pages/contact">contact us</a>.<br>
 Train the world! Change the world!<br>
-The Global Change Lab<br>
+The Global Change Lab
 </p>
 {% endblocktrans %}
 {% endautoescape %}
