[Design] password_reset: Make links red

--- a/global_change_lab/templates/account/password_reset.html
+++ b/global_change_lab/templates/account/password_reset.html
@@ -20,7 +20,12 @@
         <input type="submit" value="{% trans "Reset My Password" %}" />
     </form>
 
-    <p>{% blocktrans %}Please <a href="/pages/contact/">contact us</a> if you have any trouble resetting your password.{% endblocktrans %}</p>
+    <p>
+    {% blocktrans %}
+    Please <a class="red" href="/pages/contact/">contact us</a>
+    if you have any trouble resetting your password.
+    {% endblocktrans %}
+    </p>
 {% endblock %}
 
 {% block extra_body %}
