--- a/global_change_lab/templates/account/password_reset_done.html
+++ b/global_change_lab/templates/account/password_reset_done.html
@@ -16,8 +16,8 @@
     {% blocktrans %}
     We have sent you an e-mail with information about resetting your password.
     If you have not received the mail within a few minutes, please contact us
-    via our <a href="/pages/contact">contact page</a>  but check your spam
-    filter first ;-)
+    via our <a class="red" href="/pages/contact">contact page</a>  but check
+    your spam filter first ;-)
     {% endblocktrans %}
   </p>
 {% endblock %}
