[Text] Update texts

--- a/global_change_lab/templates/new_user.html
+++ b/global_change_lab/templates/new_user.html
@@ -32,7 +32,7 @@
           </p>
         </li>
         <li>
-          <h2>Sharing is Caring!</h2>
+          <h2>Sharing is caring!</h2>
           <p>
             {% itrans "To complete a training bit you must share something you learned. Each training bit will explain what. When we share we can all inspire each other so we can truly change the world." %}
           </p>
