--- a/skills/templates/skills/project_view.html
+++ b/skills/templates/skills/project_view.html
@@ -85,7 +85,7 @@
     </form>
     {% else %}
     <div class="not-logged-in">
-      <a href="{% url 'account_signup' %}">Sign up to comment</a>
+      <a href="{% url 'account_login' %}">Sign in to comment</a>
     </div>
     {% endif %}
   </div>
