--- a/skills/templates/skills/skills_overview.html
+++ b/skills/templates/skills/skills_overview.html
@@ -11,9 +11,9 @@
   <p>Each time you finish a training bit you'll get on step closer to finishing a skill.</p>
   {% endcomment %}
 
-  <p>{% itrans "Skills are sets of selected training bits you need to change the world." %}</p>
-  <p>{% itrans "You can take the training bits in any order you'll like but you need to take them all to get the skill." %}</p>
-  <p>{% itrans 'Start with the skill you like the most.' %}</p>
+  <p>
+    {% itrans "Skills are sets of selected training bits you need to change the world. You can take the training bits in any order you'll like but you need to take them all to get the skill. Start with the skill you like the most." %}
+  </p>
 {% endblock %}
 
 {% block content %}
