--- a/skills/templates/skills/partials/skill_list_large.html
+++ b/skills/templates/skills/partials/skill_list_large.html
@@ -17,7 +17,7 @@
         <span class="trainingbit-count">{{ skill.trainingbit_count }} Training Bits</span>
         <hr>
         <div class="tooltip" data-tooltip="{% trans 'Number of likes this skill has' %}"><span class="icon small heart red"></span> {{ skill.likes.count }}</div>
-        <div class="tooltip" data-tooltip="{% trans 'Number of users who have this skill' %}"><span class="icon small users red"></span> {{ skill.users_completed.count }}</div>
+        <div class="tooltip" data-tooltip="{% trans 'Number of users taking this skill right now' %}"><span class="icon small users red"></span> {{ skill.users_completed.count }}</div>
       </div>
     </div>
   </li>
