--- a/skills/templates/skills/skill_view.html
+++ b/skills/templates/skills/skill_view.html
@@ -62,7 +62,7 @@
       <span class="trainingbit-count">{{ skill.trainingbit_count }} Training Bits</span>
       <!-- <br> -->
       <div class="tooltip" data-tooltip="{% trans 'Number of likes this skill has' %}">{% include 'skills/partials/like_counter.html' with object=skill %}</div>
-      <div class="tooltip" data-tooltip="{% trans 'Number of users who have this skill' %}"><span class="icon users red"></span><span class="count">{{ skill.users_completed.count }}</span></div>
+      <div class="tooltip" data-tooltip="{% trans 'Number of users taking this skill right now' %}"><span class="icon users red"></span><span class="count">{{ skill.users_completed.count }}</span></div>
       {% include 'skills/partials/like_button.html' with object=skill %}
     </div>
   </div>
