--- a/skills/templates/skills/trainingbit_edit_content.html
+++ b/skills/templates/skills/trainingbit_edit_content.html
@@ -23,8 +23,8 @@
   <span class="icon signal"></span>
   <span class="status">
     {% blocktrans %}
-    You are currently <strong>not</strong> connected to the internet :-(
-    If you save your bit now the changes will be lost. Take a back up manually or wait for the internet to come back.
+    <p>You are currently <strong>not</strong> connected to the internet :-(</p>
+    <p>If you save your bit now the changes will be lost. Take a back up manually or wait for the internet to come back.</p>
     {% endblocktrans %}
   </span>
 </div>
