bugfix-fix for the content padding issues from before

--- a/scss/base.scss
+++ b/scss/base.scss
@@ -293,8 +293,8 @@ footer {
 
 }
 
-  @media #{$small-up} {
-    #content {
-      padding: rem-calc(20px);
-    }
+@media #{$small-only} {
+  #content {
+    padding: rem-calc(20px);
   }
+}
